Got rid of z-index attributes for nav and header (for mobile issue)

--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -22,7 +22,7 @@ nav {
     align-items: flex-end;
     justify-content: space-evenly;
     /* box-shadow: 0 10px 5px var(--deeper-bk-color); */
-    z-index: 5;
+
     flex: 1;
 }
 
